--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.21.4",
+    "bootstrap-icons": "^1.8.3",
     "cypress": "^9.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
