--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.21.4",
     "bootstrap-icons": "^1.8.3",
-    "cypress": "^9.3.1",
+    "cypress": "^9.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
     "json-server": "^0.16.3",
+    "node-sass": "npm:dart-sass@^1.25.0",
     "prettier": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
