--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
     "json-server": "^0.16.3",
-    "node-sass": "npm:dart-sass@^1.25.0",
     "prettier": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "sass": "^1.53.0"
   },
   "scripts": {
     "start": "react-scripts start",
